date issue on mobile resolve

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -635,4 +635,8 @@ body {
   .st-date, .event-timezone {
     max-width: 100% !important;
   }
+  span.event-datechip.v-size--small {
+    height: auto !important;
+    white-space: normal;
+  }
 }
